--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 	}
 	#divinfo{
 				z-index: 1001; 
-				width: 65%; 
+				width: 90%; 
 			    left:10px;
 				top:10px;
 				margin:auto;	
@@ -124,18 +124,18 @@
   
 <body onload="divclose()">
 <a onclick="opendiv()" href="#"><img src="https://img.icons8.com/android/48/000000/info.png"/></a>
-<div id="divinfo" style="padding: 20px; font-family: 'dance', Times, serif; color: black; font-size: 40px;">
+<div id="divinfo" style="padding: 20px; font-family: 'dance', Times, serif; color: black; font-size: 60px;">
 	<div style="float:right; color: red;" ><button id="xbuttonclose" onclick="divclose();">x</button></div>
 	<p>¿Cómo jugar?</p>
-	<p style="font-size: 30px;">Por turnos, apretad el botón con forma de corazón para que muestre una serie de preliminares que os pondrán a 100.</p>
-	<p style="font-size: 30px;">Se recomienda realizar cada preliminar durante un par minutos.</p>
-	<p style="font-size: 30px;">Después de juguetear un poquito aparecerán las posturas que os llevarán al cielo.</p>
-	<p style="font-size: 30px;">Disfrutad. &#x2764;</p>
+	<p style="font-size: 45px;">Por turnos, apretad el botón con forma de corazón para que muestre una serie de preliminares que os pondrán a 100.</p>
+	<p style="font-size: 45px;">Se recomienda realizar cada preliminar durante un par minutos.</p>
+	<p style="font-size: 45px;">Después de juguetear un poquito aparecerán las posturas que os llevarán al cielo.</p>
+	<p style="font-size: 45px;">Disfrutad. &#x2764;</p>
 </div>
 
 <b><p style="font-family: 'ero', Times, serif; color: white; text-align: center; font-size:80px;">Dados Eróticos</p></b>
 <br>
-<center><a onclick="myFunction()" href="#" title="Love it" class="btn" data-count="0"><span>&#x2764;</span></a></center>
+<center><button onclick="myFunction()" style="text-align: center; font-size: 80px; color: red;">&#10084;</button></center>
 
 <p id="demo" style="font-family: 'dance', Times, serif; color: white; text-align: center; font-size: 60px;"></p>
 
