--- a/index.html
+++ b/index.html
@@ -368,13 +368,13 @@ var lista = [
    "FIELD2": "Pide a tu pareja que te estimule lo que te apetezca y como te apetezca",
    "FIELD3": "none.png" },
  {
-   "FIELD1": 55,
+   "FIELD1": 54,
    "FIELD2": "Haced la postura del misionero",
    "FIELD3": "misionero.png"}, 
  {
    "FIELD1": 55,
-   "FIELD2": "Haced la postura del misionero",
-   "FIELD3": "misionero.png"},
+   "FIELD2": "Haced la postura del jinete",
+   "FIELD3": "jockey.png"},
  {
    "FIELD1": 56,
    "FIELD2": "Haced la postura del perrito",
