--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   </head>
   
 <body onload="divclose()">
-<a onclick="opendiv()" href="#"><img src="https://img.icons8.com/android/48/000000/info.png"/></a>
+<a onclick="opendiv()" href="#"><img src="https://img.icons8.com/android/96/000000/info.png"/></a>
 <div id="divinfo" style="padding: 20px; font-family: 'dance', Times, serif; color: black; font-size: 60px;">
 	<div style="float:right; color: red;" ><button id="xbuttonclose" onclick="divclose();">x</button></div>
 	<p>¿Cómo jugar?</p>
@@ -273,19 +273,19 @@ var lista = [
    "FIELD3": "none.png" },
  {
    "FIELD1": 30,
-   "FIELD2": "Sólo podrás estimular con la lengua en la próximas 2 tiradas",
+   "FIELD2": "Sólo podrás estimular con la lengua en las próximas 2 tiradas",
    "FIELD3": "none.png" },
  {
    "FIELD1": 31,
-   "FIELD2": "Sólo podrás estimular con los labios en la próximas 2 tiradas",
+   "FIELD2": "Sólo podrás estimular con los labios en las próximas 2 tiradas",
    "FIELD3": "none.png" },
  {
    "FIELD1": 32,
-   "FIELD2": "Tu pareja sólo podrá estimular con la lengua en la próximas 2 tiradas",
+   "FIELD2": "Tu pareja sólo podrá estimular con la lengua en las próximas 2 tiradas",
    "FIELD3": "none.png" },
  {
    "FIELD1": 33,
-   "FIELD2": "Tu pareja sólo podrá estimular con los labios en la próximas 2 tiradas",
+   "FIELD2": "Tu pareja sólo podrá estimular con los labios en las próximas 2 tiradas",
    "FIELD3": "none.png" },
  {
    "FIELD1": 34,
